switch back to using JDK7